added data attribute to each list item

--- a/app.css
+++ b/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 *{
     transition: all 1s;
 }
@@ -12,14 +14,24 @@ body {
     background: transparent;
 }
 h1 {
-    color: whitesmoke;
+    /*color: whitesmoke;*/
     letter-spacing: 3px;
 }
 .button, .buttonGroup {
     float: right;
 }
+
+.list-container {
+    background-color: whitesmoke;
+}
+
+
+
+
+
+
 /*foundation list group style*/
-.list-group {
+/*.list-group {
   margin-bottom: 1rem;
   border: 1px solid #e6e6e6;
   border-radius: 0;
@@ -61,4 +73,4 @@ h1 {
   color: #8a8a8a;
   cursor: not-allowed;
   background-color: #fefefe;
-}
+}*/
