created list item template

--- a/app.css
+++ b/app.css
@@ -17,6 +17,9 @@ h1 {
     /*color: whitesmoke;*/
     letter-spacing: 3px;
 }
+.template {
+    display: none;
+}
 .button, .buttonGroup {
     float: right;
 }
